bin_PROGRAMS = dlist_test get_class_dev_attr get_device get_driver get_module
get_class_dev_attr_SOURCES = get_class_dev_attr.c
get_device_SOURCES = get_device.c
get_driver_SOURCES = get_driver.c
get_module_SOURCES = get_module.c
INCLUDES = -I../include
LDADD = ../lib/libsysfs.la
EXTRA_CFLAGS = @EXTRA_CLFAGS@
AM_CFLAGS = -Wall -W -Wstrict-prototypes $(EXTRA_CLFAGS)

